# YSPN.Cloud

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md
QtClientApp/: CMakeLists.txt
QtClientApp/include/: auth_window.h  mainwindow.h  reg_window.h  settings.h
QtClientApp/src/: auth_window.cpp  mainwindow.cpp  mainwindow.ui  reg_window.cpp  settings.cpp
doc/: Doxyfile.cfg
linters/: run.sh
linters/cppcheck/: cppcheck
project/: CMakeLists.txt
project/App/: CMakeLists.txt
project/App/include/: App.h  AppExceptions.h  ClientConfig.h  Commands.h  CommandsExceptions.h  Worker.h
project/App/managerObserver/include/: Observer.h
project/App/src/: App.cpp  ClientConfig.cpp  Commands.cpp  Worker.cpp
project/Application/: CMakeLists.txt
project/Client/Chunker/: CMakeLists.txt  Chunker.cpp  File.cpp  InFile.cpp  OutFile.cpp
project/Client/Chunker/include/: Chunker.h  File.h  FileChunk.h  InFile.h  OutFile.h
project/Client/Chunker/src/: Chunker.cpp  File.cpp
project/Client/Chunker/tests/: CMakeLists.txt  test_Chunker.cpp
project/Client/Indexer/: CMakeLists.txt  Indexer.cpp
project/Client/Indexer/include/: Indexer.h
project/Client/Indexer/src/: Indexer.cpp
project/Client/Watcher/: CMakeLists.txt  FileSystemEvent.cpp  Notifier.cpp  Watcher.cpp
project/Client/Watcher/Apple/include/: Watcher.h
project/Client/Watcher/Apple/src/: Watcher.cpp
project/Client/Watcher/Linux/: CMakeLists.txt
project/Client/Watcher/Linux/include/: Notification.h  Watcher.h  WatcherExceptions.h
project/Client/Watcher/Linux/src/: Watcher.cpp
project/Client/Watcher/include/: FileSystemEvent.h  Notification.h  Notifier.h  Watcher.h  WatcherExceptions.h  WatcherInterface.h
project/Client/Watcher/src/: FileSystemEvent.cpp  Watcher.cpp
project/Client/Watcher/tests/: CMakeLists.txt  test_Watcher.cpp
project/Client/tests/: CMakeLists.txt  main.cpp
project/ClientApp/: CMakeLists.txt
project/ClientApp/include/: ClientApp.h
project/ClientApp/src/: ClientApp.cpp  main.cpp
project/DataBases/: CMakeLists.txt
project/DataBases/InternalDB/: CMakeLists.txt
project/DataBases/InternalDB/include/: Chunks.h  Files.h  InternalDB.h  InternalExceptions.h  SQLiteQuery.h  User.h
project/DataBases/InternalDB/src/: InternalDB.cpp  main.cpp
project/DataBases/MongoDB/: CMakeLists.txt
project/DataBases/MongoDB/include/: Chunks.h  MongoDB.h  MongoExceptions.h
project/DataBases/MongoDB/src/: MongoDB.cpp  main.cpp
project/DataBases/PostgresDB/: CMakeLists.txt  main.cpp
project/DataBases/PostgresDB/Base/include/: PostgreSQLDB.h  PostgresExceptions.h
project/DataBases/PostgresDB/Base/src/: PostgreSQLDB.cpp
project/DataBases/PostgresDB/MetaDataDB/include/: FileMeta.h  MetaDataDB.h
project/DataBases/PostgresDB/MetaDataDB/src/: MetaDataDB.cpp
project/DataBases/PostgresDB/UserDB/include/: UsersDB.h
project/DataBases/PostgresDB/UserDB/src/: UsersDB.cpp
project/DataBases/tests/: CMakeLists.txt
project/DataBases/tests/include/: gtest_utils.h
project/DataBases/tests/src/: main.cpp  test_internaldb.cpp  test_metadb.cpp  test_mongodb.cpp  test_userdb.cpp
project/Network/: CMakeLists.txt
project/Network/Client/include/: ClientNetwork.h
project/Network/Client/src/: ClientNetwork.cpp
project/Network/Server/include/: ClientWorker.h  NetworkServer.h  UserSession.h
project/Network/Server/src/: ClientWorker.cpp  NetworkServer.cpp  UserSession.cpp
project/Network/include/: Client.h  ClientNetwork.h  Connection.h  NetworkSever.h  SafeQueue.h  UserSession.h
project/Network/src/: Client.cpp  ClientNetwork.cpp  ClientWorker.cpp  Connection.cpp  NetworkSever.cpp  UserSession.cpp  main.cpp  test_client.cpp
project/Network/testsNetwork/: CMakeLists.txt
project/Network/testsNetwork/include/: gtest_utils.h
project/Network/testsNetwork/src/: TestServer.cpp  main.cpp  test_client.cpp
project/Servers/storageServer/: CMakeLists.txt  config.json
project/Servers/storageServer/include/: StorageCommand.h  StorageExceptions.h  StorageManager.h  StorageServer.h
project/Servers/storageServer/src/: StorageCommand.cpp  StorageCommands.cpp  StorageManager.cpp  StorageServer.cpp  main.cpp
project/Servers/storageServer/tests/: CMakeLists.txt
project/Servers/storageServer/tests/include/: gtest_utils.h
project/Servers/syncServer/: CMakeLists.txt  config.json
project/Servers/syncServer/include/: SyncCommands.h  SyncExceptions.h  SyncManager.h  SyncServer.h  TestPostgra.h
project/Servers/syncServer/src/: SyncCommands.cpp  SyncManager.cpp  TestPostgra.cpp  main.cpp
project/Servers/syncServer/tests/: CMakeLists.txt
project/net/: Net.h
project/storageServer/: CMakeLists.txt
project/storageServer/include/: Net.h  StorageServer.h  Worker.h
project/storageServer/src/: StorageServer.cpp  Worker.cpp  main.cpp
project/storageServer/tests/src/: tests_storageServer.cpp
project/syncServer/: CMakeLists.txt
project/syncServer/include/: SyncServer.h
project/syncServer/src/: SyncServer.cpp  main.cpp
project/syncServer/tests/: CMakeLists.txt
project/syncServer/tests/include/: gtest_utils.h
project/syncServer/tests/src/: tests_syncServer.cpp
project/tests/: CMakeLists.txt
project/testsNetwork/: CMakeLists.txt
project/utils/: CMakeLists.txt
project/utils/include/: Serializer.h  SerializerAnswer.h  SerializerChunk.h  SerializerExceptions.h  SerializerFileInfo.h  SerializerFileMeta.h  SerializerInterface.h  SerializerUserChunk.h  SerializerUserDate.h  StorageUtils.h
project/utils/include/old/: SyncUtils.h
project/utils/include/structs/: Answer.h  Chunk.h  ChunkMeta.h  CloudEvents.h  File.h  FileChunksMeta.h  FileInfo.h  FileMeta.h  UserChunk.h  UserDate.h  UserIds.h
project/utils/src/: Serializer.cpp  SerializerAnswer.cpp  SerializerChunk.cpp  SerializerFileInfo.cpp  SerializerFileMeta.cpp  SerializerUserChunk.cpp  SerializerUserDate.cpp  main.cpp  main_test.cpp
project/utils/test/: CMakeLists.txt
project/utils/test/include/: gtest_utils.h
project/utils/test/src/: tests_filemeta.cpp  tests_storage.cpp
untitled/: CMakeLists.txt
valgrind/: run.sh
(+35 files in other folders)
