CMAKE_MINIMUM_REQUIRED(VERSION 3.13.4)
PROJECT(ClientApp)

SET(CMAKE_CXX_STANDARD 17)
#SET(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra -Werror -Wpedantic")

FIND_LIBRARY(App-dev REQUIRED)
INCLUDE_DIRECTORIES(../App)

INCLUDE_DIRECTORIES(../DataBases/InternalDB/include)
INCLUDE_DIRECTORIES(../utils/include)
INCLUDE_DIRECTORIES(../Network/Client/include)

INCLUDE_DIRECTORIES(include)

ADD_EXECUTABLE(${PROJECT_NAME}
        src/ClientApp.cpp
        src/main.cpp
        )
TARGET_LINK_LIBRARIES(${PROJECT_NAME} App-dev)
