CMAKE_MINIMUM_REQUIRED(VERSION 3.13.4)
PROJECT(Utils)

FIND_PACKAGE(Boost REQUIRED)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})

SET(CMAKE_CXX_STANDARD 17)
#SET(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra -Werror -Wpedantic")

INCLUDE_DIRECTORIES(include)

ADD_EXECUTABLE(${PROJECT_NAME}
        src/main.cpp
        src/SerializerChunk.cpp)

#ADD_LIBRARY(${PROJECT_NAME}-dev src/Serializer.cpp)