CMAKE_MINIMUM_REQUIRED(VERSION 3.13.4)
PROJECT(Utils)

FIND_PACKAGE(Boost COMPONENTS log REQUIRED)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra -Werror -Wpedantic")

INCLUDE_DIRECTORIES(include)

ADD_LIBRARY(${PROJECT_NAME}-dev SHARED
        src/SerializerChunk.cpp
        src/SerializerUserChunk.cpp
        src/SerializerAnswer.cpp
        )
TARGET_LINK_LIBRARIES(${PROJECT_NAME}-dev ${Boost_LIBRARIES})

ADD_EXECUTABLE(${PROJECT_NAME}
        src/main.cpp)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${PROJECT_NAME}-dev)