FIND_PACKAGE(GTest REQUIRED CONFIG)
FIND_PACKAGE(Threads REQUIRED)

PROJECT(UtilsTests)
SET(CMAKE_CXX_STANDARD 17)

INCLUDE_DIRECTORIES(include)
ADD_EXECUTABLE(${PROJECT_NAME}
           src/main.cpp)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} GTest::gtest GTest::gmock GTest::gmock_main ${CMAKE_THREAD_LIBS_INIT} libinternalDB)

ADD_TEST(NAME Tests COMMAND ${PROJECT_NAME})