FIND_PACKAGE(GTest REQUIRED)
FIND_PACKAGE(Threads REQUIRED)

INCLUDE_DIRECTORIES("${GTEST_INCLUDE_DIRS}")

PROJECT(UtilsTests)
SET(CMAKE_CXX_STANDARD 17)

INCLUDE_DIRECTORIES(include)
ADD_EXECUTABLE(${PROJECT_NAME}
           src/main.cpp)

TARGET_LINK_LIBRARIES(${PROJECT_NAME}  ${GTEST_BOTH_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} libinternalDB)

ADD_TEST(NAME Tests COMMAND ${PROJECT_NAME})